Fri Feb 27 20:55:42 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rake: Update to rake (9237e74), typo fix and remove needless
	  private syntax.
	* test/rake: ditto.

Fri Feb 27 17:06:44 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: define vm_svar_index.

	* vm_insnhelper.c, vm.c, compile.c: use vm_svar_index names.

	* iseq.h: remove DEFAULT_SPECIAL_VAR_COUNT.
	  use VM_SVAR_FLIPFLOP_START instead.

Fri Feb 27 13:57:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (setup_narg): wipe away expanded part of buffer to get rid
	  of revealing uncleaned data.  reported by Dongkwan Kim <dkay AT
	  kaist.ac.kr>.

Wed Feb 25 22:25:07 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* spec/default.mspec: use default configuration file name.
	  https://github.com/ruby/rubyspec/commit/cc69f337b06362e5607ffa3e3ad40ef7494960cf

Wed Feb 25 22:21:56 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* spec/default.mspec: remove specific version number.
	  https://github.com/ruby/rubyspec/commit/7a909e925c1baa9c700bd44af9241aef6e596714

Wed Feb 25 22:04:04 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/win32/Win32API.rb (initialize): accept both a string and an array
	  for the arguments of the imported function.
	  reported by Aaron Stone [ruby-core:68208] [Bug #10876] [Fixes GH-835]

Wed Feb 25 18:12:11 2015  Eric Wong  <e@80x24.org>

	* signal.c (sighandler): preserve errno
	  Patch by Steven Stewart-Gallus <sstewartgallus00@mylangara.bc.ca>
	  [ruby-core:68172] [Bug #10866]

Wed Feb 25 15:59:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (push_pattern, push_glob): make globbed file names same
	  encoding to the given pattern.

Wed Feb 25 15:27:16 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/merger.rb: support 2.1+ versioning scheme.

Tue Feb 25 08:49:12 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* lib/cmath.rb (log): raise ArgumentError when more than 2 arguments
	  are passed. [ruby-core:66143] [Bug #10487]
