@@ -1426,6 +1426,21 @@ Also, a list:
 
 end
 
+# require dependencies that are not discoverable once GEM_HOME and GEM_PATH
+# are wiped
+begin
+  gem 'rake'
+rescue Gem::LoadError
+end
+
+require 'rake/packagetask'
+
+begin
+  gem 'rdoc'
+  require 'rdoc'
+rescue LoadError, Gem::LoadError
+end
+
 require 'rubygems/test_utilities'
 ENV['GEM_HOME'] = Dir.mktmpdir "home"
 ENV['GEM_PATH'] = Dir.mktmpdir "path"
