@@ -43,11 +43,9 @@ module Gem::Text
     t = str2
     n = s.length
     m = t.length
-    max = n/2
 
     return m if (0 == n)
     return n if (0 == m)
-    return n if (n - m).abs > max
 
     d = (0..m).to_a
     x = nil
